<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>br.unb.cic</groupId>
	<artifactId>soot-analysis</artifactId>
	<version>0.2.1-SNAPSHOT</version>

	<repositories>
	  <repository>
	    <id>spgroup</id>
	    <name>SPG Maven Repository (fork of the soot project)</name>
	    <url>https://maven.pkg.github.com/spgroup/soot/</url>
	  </repository>
	  <repository>
	    <id>rbonifacio</id>
	    <name>Temporary repository for the SVFA library</name>
	    <url>https://maven.pkg.github.com/rbonifacio/svfa-scala/</url>
	  </repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>br.ufpe.cin</groupId>
			<artifactId>pdg-sdg_2.12</artifactId>
			<version>0.3.1.1</version>
		</dependency>

		<dependency>
			<groupId>org.jgrapht</groupId>
			<artifactId>jgrapht-core</artifactId>
			<version>1.3.0</version>
		</dependency>
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>1.4</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
		</dependency>
		<dependency>
			<groupId>ca.mcgill.sable</groupId>
			<artifactId>soot</artifactId>
			<version>3.3.1</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jgit</groupId>
			<artifactId>org.eclipse.jgit</artifactId>
			<version>4.8.0.201706111038-r</version>
		</dependency>
	</dependencies>
	<build>
		<sourceDirectory>src/main/java</sourceDirectory>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<mainClass>br.unb.cic.analysis.Main</mainClass>
						</manifest>
					</archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.amashchenko.maven.plugin</groupId>
				<artifactId>gitflow-maven-plugin</artifactId>
				<version>1.14.0</version>
				<configuration>
					<installProject>false</installProject>
					<verbose>true</verbose>
					<gitFlowConfig>
						<productionBranch>master</productionBranch>
						<developmentBranch>develop</developmentBranch>
						<featureBranchPrefix>feature/</featureBranchPrefix>
						<releaseBranchPrefix>release/</releaseBranchPrefix>
						<hotfixBranchPrefix>hotfix/</hotfixBranchPrefix>
						<supportBranchPrefix>support/</supportBranchPrefix>
						<versionTagPrefix></versionTagPrefix>
						<origin>origin</origin>
					</gitFlowConfig>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
